# salience_bias

./: .gitignore  README.md  pyproject.toml
examples/: tutorial_evaluation.ipynb
salience_bias/analyses/evaluate/: __init__.py  api.py
salience_bias/analyses/evaluate/core/: field_metrics.py  gaze.py
salience_bias/analyses/evaluate/datasets/: steer_search.py
salience_bias/analyses/preprocess/config/: steer-search.yaml
salience_bias/analyses/preprocess/core/: image_map.py
salience_bias/analyses/preprocess/workflow/: preprocess.py
salience_bias/utils/: __init__.py  calibrate.py  dataset.py  numeric.py  psychopy.py
